Fixed styling issue that caused modal close btn to be hidden on small screens

--- a/content/style.css
+++ b/content/style.css
@@ -119,6 +119,7 @@ html, body {
 }
 
 .modal {
+    margin-top: 75px;
     min-width: 75%;
     line-height: 2;
 }
